Prevent shader canvas from covering debug elements.

--- a/app.css
+++ b/app.css
@@ -100,10 +100,18 @@ svg {
   pointer-events: none;
 }
 
+.debug #shader-canvas {
+  position: static;
+}
+
 .non-shader {
   position: fixed;
   top: 0;
   left: 0;
+}
+
+.debug .non-shader {
+  position: static;
 }
 
 .text-labels {
